# astro-context

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api/agent/: index.html
api/cache/: index.html
api/evaluation/: index.html
api/exceptions/: index.html
api/formatters/: index.html
api/ingestion/: index.html
api/memory/: index.html
api/models/: index.html
api/multimodal/: index.html
api/observability/: index.html
api/pipeline/: index.html
api/protocols/: index.html
api/query/: index.html
api/retrieval/: index.html
api/storage/: index.html
changelog/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/context-engineering/: index.html
concepts/protocols/: index.html
concepts/token-budgets/: index.html
contributing/: index.html
cookbook/: index.html
cookbook/agent-with-tools/: index.html
cookbook/chatbot-with-memory/: index.html
cookbook/custom-retriever/: index.html
cookbook/document-ingestion/: index.html
cookbook/evaluation-workflow/: index.html
cookbook/production-patterns/: index.html
cookbook/rag-pipeline/: index.html
docs/: mkdocs.yml
docs/docs/: changelog.md  contributing.md  faq.md  getting-started.md  index.md  llms.txt
docs/docs/api/: agent.md  cache.md  evaluation.md  exceptions.md  formatters.md  index.md  ingestion.md  llm.md  mcp.md  memory.md  models.md  multimodal.md  observability.md  pipeline.md  protocols.md  query.md  retrieval.md  storage.md  tokens.md
docs/docs/concepts/: architecture.md  context-engineering.md  index.md  protocols.md  token-budgets.md
docs/docs/cookbook/: agent-with-tools.md  chatbot-with-memory.md  custom-retriever.md  document-ingestion.md  evaluation-workflow.md  index.md  production-patterns.md  rag-pipeline.md
docs/docs/examples/: agent-with-tools.md  chatbot-with-memory.md  document-ingestion.md  rag-pipeline.md
docs/docs/getting-started/: first-pipeline.md  index.md  installation.md  quickstart.md
docs/docs/guides/: advanced-retrieval.md  agent.md  cache.md  mcp.md  (+13 more)
docs/includes/: abbreviations.md
docs/overrides/: main.html
docs/research/: best-practices-summary.md  gap-analysis-results.md
examples/: budget_management.py  chat.py  custom_retriever.py  graph_memory.py  hybrid_rag.py  memory_showcase.py
faq/: index.html
getting-started/: index.html
getting-started/first-pipeline/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/advanced-retrieval/: index.html
guides/agent/: index.html
guides/cache/: index.html
guides/classifiers/: index.html
guides/evaluation/: index.html
guides/formatters/: index.html
guides/ingestion/: index.html
guides/memory/: index.html
guides/multimodal/: index.html
guides/observability/: index.html
guides/pipeline/: index.html
guides/query-transform/: index.html
guides/retrieval/: index.html
guides/storage/: index.html
search/: search_index.json
src/anchor/: __init__.py  _callbacks.py  _math.py  cli.py  exceptions.py
src/astro_context/: __init__.py  _math.py  cli.py  exceptions.py
stylesheets/: extra.css
tasks/: todo.md
tests/: conftest.py  test__math.py  test_exports.py
tests/llm/: test_errors.py  test_pricing.py  test_registry.py
tests/test_agent/: test_agent.py  test_schema.py  test_tool_decorator.py  test_tools.py
tests/test_cache/: test_backend.py  test_redis_backend.py
tests/test_cli/: test_cli.py
tests/test_evaluation/: test_ab_testing.py  test_batch.py  test_evaluator.py  test_human.py  test_rag_metrics.py  test_retrieval_metrics.py
tests/test_formatters/: test_anthropic.py  test_anthropic_multiblock.py  test_formatter_security.py  test_generic.py  test_openai.py  test_utils.py
tests/test_ingestion/: conftest.py  test_chunkers.py  test_code_chunker.py  test_hierarchical.py  test_ingester.py  test_parsers.py  test_semantic_chunker.py  test_table_chunker.py
tests/test_integration/: test_gc_pipeline.py  test_golden_path.py  test_persistent_memory.py
tests/test_mcp/: test_agent_integration.py  test_client.py  test_errors.py  test_models.py  test_pool.py  test_tools.py
tests/test_memory/: test_auto_promotion.py  test_compactor.py  test_consolidator.py  test_decay.py  test_eviction.py  test_extractor.py  test_gc.py  test_graph_memory.py  test_manager.py  test_manager_persistent.py  test_manager_unified.py  test_memory_callbacks.py  test_progressive.py  test_progressive_integration.py  test_sliding_window.py  test_sliding_window_callback.py  test_sliding_window_integration.py  test_summary_buffer.py  test_thread_safety.py
tests/test_models/: test_budget.py  test_budget_defaults.py  test_context.py  test_memory_extended.py  test_query_compat.py  test_source_type_conversation.py  test_streaming.py
tests/test_multimodal/: __init__.py  test_converter.py  test_encoders.py  test_models.py  test_tables.py
tests/test_observability/: test_callback.py  test_cost.py  test_exporters.py  test_metrics.py  test_otlp.py  test_tracer.py
tests/test_pipeline/: conftest.py  test_async_pipeline.py  test_budget_enforcement.py  test_callback_safety.py  test_decorator_api.py  test_error_paths.py  test_memory_steps.py  test_pipeline.py  test_query_enrichment.py  test_step.py
tests/test_protocols/: test_memory_protocols.py  test_protocol_compliance.py
tests/test_query/: __init__.py  test_classified_step.py  test_classifiers.py  test_pipeline.py  test_rewriter.py  test_transformers.py
tests/test_retrieval/: conftest.py  test_async_native.py  test_cross_modal.py  test_dense.py  test_hybrid.py  test_hybrid_tolerance.py  test_late_interaction.py  test_memory_retriever.py  test_reranker.py  test_rerankers.py  test_router.py  test_rrf.py  test_sparse.py
tests/test_storage/: conftest.py  test_conversation_store.py  test_entry_store.py  test_entry_store_shared.py  test_graph_store.py  test_json_file_store.py  test_memory_store.py  test_thread_safety.py
tests/test_tokens/: test_counter.py
(+289 files in other folders)
