[project]
name = "astro-anchor"
version = "0.1.1"
description = "Context engineering toolkit for AI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Astro", email = "astro@anchor.dev" }
]
keywords = ["context-engineering", "rag", "llm", "ai", "retrieval", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
license-files = ["LICENSE"]

dependencies = [
    "pydantic>=2.8,<3",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7,<1"]
bm25 = ["rank-bm25>=0.2.2,<1"]
flashrank = ["flashrank>=0.2,<1"]
cli = ["typer>=0.12,<1", "rich>=13,<14"]
anthropic = ["anthropic>=0.40,<1"]
agents = ["anthropic>=0.40,<1"]
all-providers = ["astro-anchor[anthropic,openai,gemini,grok,ollama,litellm]"]
gemini = ["google-genai>=1.0.0"]
grok = ["openai>=1.50.0"]
litellm = ["litellm>=1.50.0"]
mcp = ["fastmcp>=3.0,<4"]
ollama = ["openai>=1.50.0"]
openai = ["openai>=1.50.0"]
pdf = ["pypdf>=4,<5"]
sqlite = ["aiosqlite>=0.20,<1"]
postgres = ["asyncpg>=0.29,<1"]
redis = ["redis>=5.0,<8"]
all-storage = ["astro-anchor[sqlite,postgres,redis]"]
otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9,<10",
    "mkdocs-minify-plugin>=0.8,<1",
    "mkdocstrings[python]>=0.25,<1",
]
all = ["astro-anchor[bm25,cli,anthropic,gemini,grok,litellm,ollama,openai,tiktoken,agents,pdf,flashrank,otlp,sqlite,postgres,redis]"]

[project.scripts]
anchor = "anchor.cli:app"

[project.urls]
Homepage = "https://github.com/artcgranja/anchor"
Repository = "https://github.com/artcgranja/anchor"
Documentation = "https://artcgranja.github.io/anchor"
"Bug Tracker" = "https://github.com/artcgranja/anchor/issues"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "rank-bm25>=0.2.2,<1",
    "typer>=0.12,<1",
    "rich>=13,<14",
    "tiktoken>=0.7,<1",
    "mkdocs-material>=9.7.2",
]
docs = [
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.uv.build-backend]
module-name = "anchor"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF", "C90", "PT", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT011"]
"examples/**/*.py" = ["S101", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["anchor"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flashrank.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "google.genai.*", "litellm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiosqlite.*", "asyncpg.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["anchor"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
